# gekkota

./: AUTHORS  Makefile.am  Makefile.in  TODO  configure.in  gekkota.sln
src/: Makefile.am  Makefile.in
src/gekkota/: Makefile.am  Makefile.in  gekkota.c  gekkota.h  gekkota.rc  gekkota.sln  gekkota.vcproj  gekkota_bit.h  gekkota_buffer.c  gekkota_buffer.h  gekkota_crc32.c  gekkota_crc32.h  gekkota_dns.c  gekkota_dns.h  gekkota_errors.h  gekkota_event.c  gekkota_event.h  gekkota_event_internal.h  gekkota_idn.h  gekkota_idn_unix.c  gekkota_idn_win32.c  gekkota_internal.h  gekkota_ipaddress.c  gekkota_ipaddress.h  gekkota_ipaddress_internal.h  gekkota_ipaddress_unix.c  gekkota_ipaddress_unix.lo  gekkota_ipaddress_win32.c  gekkota_ipendpoint.c  gekkota_ipendpoint.h  gekkota_ipendpoint_internal.h  gekkota_iphostentry.c  gekkota_iphostentry.h  gekkota_iphostentry_internal.h  gekkota_iphostentry_unix.c  gekkota_iphostentry_win32.c  gekkota_list.c  gekkota_list.h  gekkota_lzf.c  gekkota_lzf.h  (+42 more)
src/gekkota_test/: Makefile.am  Makefile.in  gekkota_test.sln  gekkota_test.vcproj  gekkota_test_client.c  gekkota_test_server.c
